# pbip-model-migrator

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pbip_model_migrator/core/: migration.py
src/pbip_model_migrator/gui/: app.py  mapping_builder.py
src/pbip_model_migrator/operations/: base.py  table_mapper.py
tests/: test_mapping_builder.py  test_table_mapper.py
